populate drop down menu with movie names
Co-authored-by:  Jillian Gibson <jillian.l.gibson@gmail.com>

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <form class ="form-one">
       <div>
         <label>Select your age:</label>
-        <select class="form-control" id="movies">
+        <select class="form-control">
           <option>Child</option>
           <option>Adult</option>
           <option>Senior</option>      
@@ -20,22 +20,16 @@
       </div>
       <div>
         <label>Select a movie below:</label>
-        <select class="form-control" id="movies">  
-          <ul>
-            <li><option>Movie1</option></li>
-            <li><option>Movie2</option></li>
-            <li><option>Movie3</option></li>
-            <li><option>Movie4</option></li>
-          </ul>         
-        </select>    
+        <select class="form-control" id="movies">          
+        </select>         
       </div>
       <div>
         <label>Select a time:</label>
-        <select class="form-control" id="movies">
-          <option>Matinee</option>
+        <select class="form-control" id="times">
+          <!-- <option>Matinee</option>
           <option>6:00pm</option>
           <option>9:00pm</option>
-          <option>10:00pm</option>
+          <option>10:00pm</option> -->
         </select>    
       </div>
       <button type="submit" class="btn">Get Ticket Price!</button>
